force-app/main/default/objects/Program_Contact_Assignment__c/Program_Contact_Assignment__c.object-meta.xml
<CustomObject>
    <label>Program Contact Assignment</label>
    <nameField>
        <displayFormat>PCA-{0000}</displayFormat>
        <label>Program Contact Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Contact Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>