force-app/main/default/objects/Program_Contact_Assignment__c/fields/Actual_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Completion_Date__c</fullName>
    <inlineHelpText>When did the employee actually finish this program?</inlineHelpText>
    <label>Actual Completion Date</label>
    <type>Date</type>
</CustomField>