force-app/main/default/objects/Program_Contact_Assignment__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>HYPERLINK(
  &quot;/lightning/r/Contact/&quot;&amp; Contact__c &amp;&quot;/view&quot;,
   Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName,
  &quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>