force-app/main/default/objects/Program_Contact_Assignment__c/fields/Program_Duration__c.field-meta.xml
<CustomField>
    <fullName>Program_Duration__c</fullName>
    <description>How long the program is expected to last (in days).</description>
    <formula>TEXT(Training_Program__r.Duration_in_days__c) &amp; &quot; days&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Duration</label>
    <type>Text</type>
</CustomField>