force-app/main/default/objects/Program_Contact_Assignment__c/fields/Time_Taken__c.field-meta.xml
<CustomField>
    <fullName>Time_Taken__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Time Taken</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>