force-app/main/default/objects/Program_Contact_Assignment__c/fields/Training_Program__c.field-meta.xml
<CustomField>
    <fullName>Training_Program__c</fullName>
    <label>Training Program</label>
    <referenceTo>Training_Program__c</referenceTo>
    <relationshipLabel>Associated Contacts</relationshipLabel>
    <relationshipName>Program_Task_Assignments1</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>