force-app/main/default/objects/Program_Contact_Assignment__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <formula>IF(TODAY() &gt;= Start_Date__c, (TODAY() - Start_Date__c) /7 + 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>