force-app/main/default/objects/Program_Contact_Assignment__c/recordTypes/Program_Contact_Assignment.recordType-meta.xml
<RecordType>
    <fullName>Program_Contact_Assignment</fullName>
    <active>true</active>
    <label>Program Contact Assignment</label>
</RecordType>